--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -223,16 +223,17 @@ jobs:
       
       - name: Run Checkov action
         id: checkov
+        if : steps.changes.outputs.FILTERED_FILES != ''
         uses: bridgecrewio/checkov-action@v12
         with:
           directory: changed_files/
           output_format: 'json'
           output_file_path: checkov_result
           quiet: 'true'
-          soft_fail: 'true'      
 
-      - name: Display Results
+      - name: Process Checkov results
         id: display
+        if : steps.changes.outputs.FILTERED_FILES != ''
         run: |
           echo "Checkov Results:"
           echo "# Checkov IaC Scan Report" > checkov_report.md
@@ -246,13 +247,14 @@ jobs:
 
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
+        if: steps.checkov.outcome == 'failure'
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body-path: checkov_report.md
 
       - name: Fail job if Trivy found issues
-        if: steps.trivy_iac.outcome == 'failure'
+        if: steps.checkov.outcome == 'failure'
         run: |
           echo "❌ Trivy found vulnerabilities — failing the job."
           exit 1
