--- a/lib/kube/preview/deployment.yaml
+++ b/lib/kube/preview/deployment.yaml
@@ -48,6 +48,13 @@ spec:
                       - platform-cluster-01-staging-pool
       imagePullSecrets:
         - name: regcred
+      resources:
+        requests:
+          cpu: 250m
+          memory: '400Mi'        
+        limits:
+          cpu: 500m
+          memory: '800Mi'
       containers:
         - name: $KUBE_APP
           image: $KUBE_DEPLOYMENT_IMAGE
@@ -62,8 +69,10 @@ spec:
                 - ALL
           resources:
             requests:
+             cpu: 250m
              memory: '400Mi'        
             limits:
+             cpu: 250m
              memory: '800Mi' 
           ports:
             - containerPort: 8080
