--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -62,6 +62,13 @@ spec:
               drop:
                 - ALL
 
+      resources:
+        requests:
+          cpu: 250m
+          memory: '200Mi'
+        limits:
+          cpu: 250m
+          memory: '1300Mi'
       containers:
         - name: temporal-server
           image: temporalio/auto-setup:1.27.2
@@ -90,8 +97,10 @@ spec:
               mountPath: /etc/temporal/config
           resources:
             requests:
+              cpu: 250m
               memory: '200Mi'
             limits:
+              cpu: 250m
               memory: '400Mi'
         - name: temporal-admin-tools
           image: temporalio/admin-tools:1.27.2-tctl-1.18
@@ -114,8 +123,10 @@ spec:
           tty: true
           resources:
             requests:
+              cpu: 250m
               memory: '100Mi'
             limits:
+              cpu: 250m
               memory: '200Mi'
 
         - name: temporal-ui
@@ -141,8 +152,10 @@ spec:
               mountPath: /home/ui-server/config
           resources:
             requests:
+              cpu: 250m
               memory: '200Mi'
             limits:
+              cpu: 250m
               memory: '400Mi'
           startupProbe:
             httpGet:
@@ -181,8 +194,10 @@ spec:
               mountPath: /opt/app/logs
           resources:
             requests:
+              cpu: 250m
               memory: '150Mi'
             limits:
+              cpu: 250m
               memory: '300Mi'
       volumes:
         - name: tmp
