feat: add minimal security permissions to all GitHub workflows
- Add read-only content permissions and OIDC token write access to deployment workflows
- Add pull-request write permissions to workflows that need PR interaction
- Ensures principle of least privilege for enhanced security
- Covers cd.yml, ci.yml, clean.yml, permanent_preview.yml, and production.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]
 
+# Ensures CI workflow has minimal permissions for security
+permissions:
+  contents: read        # Read-only access to repo contents for safer workflows
+  pull-requests: write  # Allow workflow to comment on, label, and update pull request as part of automation
+  id-token: write       # Allow OIDC tokens for secure cloud authentication
+
 jobs:
   lint:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
