--- a/.github/workflows/permanent_preview.yml
+++ b/.github/workflows/permanent_preview.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+# Ensures permanent preview deployment has minimal read-only permissions for security
+permissions:
+  contents: read   # Read-only access to repo contents for safer workflows
+  id-token: write  # Allow OIDC tokens for secure cloud authentication
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
