--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]
 
+# Ensures preview deployment has minimal permissions for security
+permissions:
+  contents: read        # Read-only access to repo contents for safer workflows
+  pull-requests: write  # Allow workflow to comment on, label, and update pull request as part of automation
+  id-token: write       # Allow OIDC tokens for secure cloud authentication
+
 jobs:
   deploy:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
