--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,6 +207,7 @@ jobs:
           echo "FILTERED_FILES=$FILTERED_FILES" >> $GITHUB_OUTPUT
 
       - name: Run Trivy scan on IaC
+        if: ${{ steps.changes.outputs.FILTERED_FILES != '' }}
         id: trivy_iac
         uses: aquasecurity/trivy-action@0.33.0
         continue-on-error: true
@@ -220,10 +221,10 @@ jobs:
           ignore-unfixed: true
           trivyignores: ".trivyignore"
           exit-code: 1
-          
+
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
-        if: steps.trivy_iac.outcome == 'failure'
+        if: ${{ steps.changes.outputs.FILTERED_FILES != '' && steps.trivy_iac.outcome == 'failure' }}
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
