--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: read        # Read-only access to repo contents for safer workflows
   pull-requests: write  # Allow workflow to comment on, label, and update pull request as part of automation
+  id-token: write       # Allow OIDC tokens for secure cloud authentication
 
 jobs:
   clean:
