--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -18,10 +18,11 @@ spec:
       labels:
         app: $KUBE_APP
     spec:
-      # Security: Run all containers as non-root user 999 to prevent privilege escalation
+      automountServiceAccountToken: false
+      # Security: Run all containers as non-root user 10001 to prevent privilege escalation
       securityContext:
         runAsNonRoot: true
-        runAsUser: 999
+        runAsUser: 10001
         runAsGroup: 999
         fsGroup: 999
         # Security: Enable kernel-level syscall filtering to reduce attack surface
@@ -38,6 +39,13 @@ spec:
                       - platform-cluster-01-production-pool
       imagePullSecrets:
         - name: regcred
+      resources:
+        requests:
+          cpu: 250m
+          memory: '400Mi'
+        limits:
+          cpu: 500m
+          memory: '800Mi'
       containers:
         - name: $KUBE_APP
           image: $KUBE_DEPLOYMENT_IMAGE
@@ -52,8 +60,10 @@ spec:
                 - ALL
           resources:
             requests:
+              cpu: 250m
               memory: '400Mi'
             limits:
+              cpu: 500m
               memory: '800Mi'
           ports:
             - containerPort: 8080
