--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -4,6 +4,12 @@ on:
   pull_request_target:
     types: [closed]
 
+# Ensures PR cleanup workflow has minimal permissions for security
+permissions:
+  contents: read        # Read-only access to repo contents for safer workflows
+  pull-requests: write  # Allow workflow to comment on, label, and update pull request as part of automation
+  id-token: write       # Allow OIDC tokens for secure cloud authentication
+
 jobs:
   clean:
     uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.6
