fix: resolve Kubernetes network policy and resource quota issues
- Add ingress policy to allow app connections to Temporal on port 7233
- Update CPU quota to accommodate 5 containers (1 app + 4 Temporal)
- Fixes preview deployment failures due to exceeded quota errors

--- a/lib/kube/preview/resource-quota.yaml
+++ b/lib/kube/preview/resource-quota.yaml
@@ -9,8 +9,8 @@ metadata:
 spec:
   hard:
     # CPU limits (based on IaC optimization: 250m request, 500m limit per container)
-    requests.cpu: "1"      # ~4 containers per preview (250m x 4)
-    limits.cpu: "2"        # ~4 containers per preview (500m x 4)
+    requests.cpu: "1.25"   # 5 containers per preview (250m x 5: 1 app + 4 Temporal)
+    limits.cpu: "2.5"      # 5 containers per preview (500m x 5: 1 app + 4 Temporal)
 
     # Memory limits (based on IaC optimization: 400Mi request, 800Mi limit per container)
     requests.memory: 1.6Gi # ~4 containers per preview (400Mi x 4)
