fix: update network policy to allow ingress to all preview apps
- Use matchExpressions to allow both $KUBE_APP and generic preview apps
- Fixes permanent preview downtime caused by hardcoded commit-specific selectors

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -70,8 +70,10 @@ metadata:
   namespace: $KUBE_NS
 spec:
   podSelector:
-    matchLabels:
-      app: $KUBE_APP
+    matchExpressions:
+      - key: app
+        operator: In
+        values: [$KUBE_APP, "flask-react-app-preview"]
   policyTypes:
     - Ingress
   ingress:
