--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -23,8 +23,8 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 10001
-        runAsGroup: 999
-        fsGroup: 999
+        runAsGroup: 10001
+        fsGroup: 10001
         # Security: Enable kernel-level syscall filtering to reduce attack surface
         seccompProfile:
           type: RuntimeDefault
@@ -48,7 +48,7 @@ spec:
           memory: '800Mi'
       containers:
         - name: $KUBE_APP
-          image: $KUBE_DEPLOYMENT_IMAGE
+          image: "$KUBE_DEPLOYMENT_IMAGE
           imagePullPolicy: Always
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
